# Team-Neki-Log

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: ruff-on-edit.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  daily-ga-report.yml
aggregation/: README.md
aggregation/infra/: apigateway.tf  budgets.tf  iam.tf  lambda.tf  main.tf  outputs.tf  s3.tf  terraform.tfvars.example  variables.tf
aggregation/src/: handler.py  requirements.txt
aggregation/src/schemas/: ga4-daily-report.v1.json
aggregation/tests/: conftest.py  requirements.txt  test_handler.py
aggregation/tests/fixtures/: valid_payload.json
docs/adr/: 0001-aggregation-storage-on-s3.md  0002-lint-and-ci-pipeline.md  0003-producer-in-repo.md
docs/aggregation/: hld.md  lld.md
docs/conventions/: commit-convention.md
docs/plan/: roadmap.md
scripts/: ga_daily_report.py  ingest.py
scripts/tests/: conftest.py  test_ingest.py
